# Sistemas_Multimidia

lista3/audio/: Untitled.ipynb  plot_audio.py
lista3/code/: CMakeLists.txt  atividade3_1.cpp  atividade3_2.cpp  atividade3_3.cpp  atividade3_4.cpp  atividade3_5.cpp  atividade3_6.cpp  atividade3_7.cpp  plotwave.py  python.cpp
lista3/video/: output_3_2.avi
